Implement Webpack bundling with hot reload

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width">
 
     <title>Custodian Tools</title>
-    <link rel="stylesheet" href="./bootstrap.css">
-    <link rel="stylesheet" href="./popup.css">
+    <link rel="stylesheet" href="src/bootstrap.css">
+    <link rel="stylesheet" href="src/popup.css">
+
+    <script src="node_modules/@intercellular/cell/cell.js"></script>
   </head>
   <body>
   </body>
-  <script src="./popup-dist.js"></script>
+  <script src="/popup.bundle.js"></script>
 </html>
