--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   </head>
   <body>
   </body>
+  <script src="https://connect.trezor.io/4/connect.js"></script>
   <script src="/popup.bundle.js"></script>
 </html>
