Production deploy conf

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
     <title>Custodian Tools</title>
     <link rel="stylesheet" href="src/bootstrap.css">
+
     <link rel="stylesheet" href="src/popup.css">
 
-    <script src="node_modules/@intercellular/cell/cell.js"></script>
+    <script src="https://cdn.rawgit.com/bitex-la/cell/virus/cell.js"></script>
   </head>
   <body>
   </body>
