Add configuration modal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
 
     <title>Custodian Tools</title>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="src/bootstrap.css">
 
     <link rel="stylesheet" href="src/popup.css">
